update submodules target branch

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "Backend"]
 	path = Backend
 	url = git@github.com:KOSTA-Travelog/Backend.git
+	branch = dev
 [submodule "Frontend"]
 	path = Frontend
 	url = git@github.com:KOSTA-Travelog/Frontend.git
+	branch = dev
